変数の初期化漏れを修正

--- a/RTEコード生成モデル版/cls_SheetReader.cls
+++ b/RTEコード生成モデル版/cls_SheetReader.cls
@@ -36,6 +36,7 @@ Public Sub Init(ByRef obj_Sheet As Worksheet)
     m_intRowHeader = INT_ROW_START
     m_intRowFooter = INT_ROW_START
     m_intRowInsert = INT_ROW_START
+    bln_State = False
     str_Text = ""
     int_Line = 0
 End Sub
